--- a/Python for AI/WhitePapers.ipynb
+++ b/Python for AI/WhitePapers.ipynb
@@ -18,7 +18,19 @@
     "\n",
     "Se hace una breve introducción al *Broadcasting* como técnica que usa NumPy para realizar operaciones artiméticas sobre dos o más arrays con distintas dimensiones. \n",
     "\n",
-    "- Actividad 01.01 - Ampliar dicha explicación, aportando posibles restricciones o limitaciones a dicho sistema y ejemplos propios de los casos de uso."
+    "- Actividad 01.01 - Ampliar dicha explicación, aportando posibles restricciones o limitaciones a dicho sistema y ejemplos propios de los casos de uso.\n",
+    "\n",
+    "También se introduce el trabajo con ficheros usando memoria mapeada.\n",
+    "\n",
+    "- Actividad 01.02 - Verificar la eficacia y mejora posible de rendimiento del uso de dicha técnica sobre ndarrays de tamaños grandes."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <center> Actividad 01.01</center>\n",
+    "--- "
    ]
   },
   {
@@ -189,7 +201,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Matriz y vector de dimensiones NO válidas\n",
+    "### Caso no válido 1: Matriz y vector de dimensiones NO válidas\n",
     "\n",
     "Se expone a continuación un ejemplo donde una matriz y un vector no son Broadcastable. No tienen dimensiones válidas\n",
     "\n",
@@ -220,7 +232,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Matriz y matriz de dimensiones NO válidas\n",
+    "### Caso no válido 2: Matriz y matriz de dimensiones NO válidas\n",
     "\n",
     "Se expone a continuación ejemplos donde una matriz y otra matriz no son Broadcastable. No tienen dimensiones válidas"
    ]
@@ -254,71 +266,61 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Artículo 01\n",
+    "## <center> Actividad 01.02</center>\n",
+    "--- "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Artículo 02\n",
     "\n",
-    "### The NumPy array: a structure for efficient numerical computation\n",
+    "### Data Structures for Statistical Computing in Python\n",
     "\n",
-    "Van Der Walt, S., Colbert, S. C., &amp; Varoquaux, G. (2011). The NumPy array: A\n",
-    "structure for efficient numerical computation. Computing in Science and\n",
-    "Engineering, 13(2), 22-30. https://doi.org/10.1109/MCSE.2011.37\n",
+    "McKinney, W. (2010). Data Structures for Statistical Computing in Python.\n",
+    "Proceedings of the 9th Python in Science Conference, December, 56-61.\n",
+    "https://doi.org/10.25080/majora-92bf1922-00a\n",
     "\n",
-    "https://www.researchgate.net/publication/224223550_The_NumPy_Array_A_Structure_for_Efficient_Numerical_Computation\n",
+    "https://www.researchgate.net/publication/265001241_Data_Structures_for_Statistical_Computing_in_Python\n",
     "\n",
-    "En este artículo se presenta la estructura *ndarray* de NumPy, y se hace un estudio sobre su uso y cómo mejora el rendimiento de ciertas operaciones matemáticas para la computación numérica.\n",
+    "En este segundo artículo el creador de *pandas* introduce dicha librería en comparación con las estructuras nativas de R.\n",
     "\n",
-    "Se hace una breve introducción al *Broadcasting* como técnica que usa NumPy para realizar operaciones artiméticas sobre dos o más arrays con distintas dimensiones. \n",
-    "\n",
-    "- Actividad 01.01 - Ampliar dicha explicación, aportando posibles restricciones o limitaciones a dicho sistema y ejemplos propios de los casos de uso.\n",
-    "\n",
-    "También se introduce el trabajo con ficheros usando memoria mapeada.\n",
-    "\n",
-    "- Actividad 01.02 - Verificar la eficacia y mejora posible de rendimiento del uso de dicha técnica sobre ndarrays de tamaños grandes."
+    "- Actividad 02.01 - Desarrollar una opinión razonada del estado actual de las herramientas de análisis de datos estadísticos en contraposición a como se muestran en el artículo, R vs Python vs SQL vs Others..."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Fuente: \n",
+    "## <center> Actividad 02.01</center>\n",
+    "--- "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Bibliografía\n",
     "[Numpy, Broadcasting](https://numpy.org/devdocs/user/theory.broadcasting.html)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "También se introduce el trabajo con ficheros usando memoria mapeada.\n",
-    "\n",
-    "- Actividad 01.02 - Verificar la eficacia y mejora posible de rendimiento del uso de dicha técnica sobre ndarrays de tamaños grandes."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Artículo 2"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- Actividad 02.01 - Desarrollar una opinión razonada del estado actual de las herramientas de análisis de dattos estadísticos en contraposición a como se muestran en el artículo, R vs Python vs SQL vs Others..."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
