Resueltos artículo 1. Pendiente art 2

--- a/Python for AI/WhitePapers.ipynb
+++ b/Python for AI/WhitePapers.ipynb
@@ -370,7 +370,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Comportamiento usando slicing sobre una dimension N\n",
+    "### Comportamiento usando slicing sobre una dimension N\n",
     "Se puede observar sin embargo como el acceso a traves de slicing a dimensiones concretas empeora el rendimiento de memmap. Esto es debido a su comportamiento de lecutra de bloques completos en su búsqueda de valores dentro de las dimensiones solicitadas, teniendo que leer bloques enteros para acceder a solo un valor del mismo."
    ]
   },
@@ -655,9 +655,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Librerías hyp5, pytables, y zarr\n",
+    "### Librerías hyp5, pytables, y zarr\n",
     "\n",
-    "Sería interesante valorar el uso de librerías para poder controlar la compresión y fragmentación de bloques de memoria. Estas librerías permiten modificar estos valores para poder acceder de forma más personalizada a nuestros dataset así como ofrecer ciertas caracterísiticas como acceso en remoto a nuestros archivos."
+    "Sería interesante valorar el uso de librerías para poder controlar la compresión y fragmentación de bloques de memoria. Estas librerías permiten modificar estos valores para poder acceder de forma más personalizada a nuestros dataset. Además ofrecen ciertas caracterísiticas como acceso en remoto a nuestros archivos a traves de aws s3 por ejemplo"
    ]
   },
   {
@@ -690,7 +690,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Exposición"
+   ]
   },
   {
    "cell_type": "markdown",
