--- a/Math for AI/Ejercicios_evaluables.ipynb
+++ b/Math for AI/Ejercicios_evaluables.ipynb
@@ -98,28 +98,224 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Ejercicio 2:"
+    "# Ejercicio 2:\n",
+    "Sea $A\\in \\mathbb{R} ^{3\\times 3}$ la matriz cuadradada dada por $$A=\\begin{pmatrix} 3 & -3 & 2 \\\\ -4 & 4 & -4 \\\\ -3 & 3 & 2 \\end{pmatrix}$$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Apartado a) \n",
+    "\n",
+    "Obténgase cuatro matrices $B\\in \\mathbb{R} ^{3\\times 3}$ tales que $B^{2}=A$\n",
+    "\n",
+    "Sugerencia: diagonalizar A puede ser de utilidad. Para el proceso de diagonalización, puedes hacer uso de numpy.linalg.eig en Python."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Paso 1:\n",
+    "\n",
+    "Procedemos a obtener la raiz cuadrada de A. Para ello diagonalizamos A para asi generar la siguiente ecuación: $A=PDP^{-1}$\n",
+    "\n",
+    "Partiendo de esta ecuación podemos realizar la siguiente transformación: $\\sqrt{A}=P\\sqrt{D}P^{-1}$\n",
+    "\n",
+    "Siendo P la matriz formada por los vectores propios de A como columnas y D la matriz formada por los valores propios de A como diagonal principal.\n",
+    "\n",
+    "Comenzamos obteniendo los valores y vectores propios de A:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valores propios:  [-3.69306809e-16+0.j          5.00000000e+00+3.74165739j\n",
+      "  5.00000000e+00-3.74165739j] \n",
+      "\n",
+      "Vectores propios: \n",
+      " [[ 7.07106781e-01+0.j         -2.51164010e-01-0.33563203j\n",
+      "  -2.51164010e-01+0.33563203j]\n",
+      " [ 7.07106781e-01+0.j          2.15283438e-01+0.53701124j\n",
+      "   2.15283438e-01-0.53701124j]\n",
+      " [ 1.04676050e-17+0.j          6.99671172e-01+0.j\n",
+      "   6.99671172e-01-0.j        ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# Matriz A\n",
+    "A = np.mat([    [3, -3, 2],\n",
+    "                [-4, 4, -4],\n",
+    "                [-3, 3, 3]    ])\n",
+    "\n",
+    "# Valores propios y vectores propios de A\n",
+    "eigVal, P = np.linalg.eig(A)\n",
+    "\n",
+    "# Uno de los valores propios podemos considerarlo al ser extremadamente pequeño\n",
+    "print(\"Valores propios: \", eigVal, \"\\n\\nVectores propios: \\n\", P)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Paso 2:\n",
+    "\n",
+    "Una vez obtenidos los valores y vectores propios de A, declaramos una nueva Matriz D con los valores propios en la diagonal principal. Podemos modificar estos valores propios para obtener matrices diferentes B que cumplan $B^{2}=A$. Para ello modificamos el signo de los valores propios dado que sus cuadrados daran el mismo resultado (recordamos que uno de ellos es nulo a pesar de obtener un valor ínfimo).\n",
+    "\n",
+    "Declaramos 4 matrices diferentes con las siguientes modificaciones. Sean los valores propios: 0, a, b:\n",
+    "\n",
+    "- 0, -a, b\n",
+    "- 0, a, -b\n",
+    "- 0, -a, -b\n",
+    "- 0, a, b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Matriz de valores propios en la diagonal principal\n",
+    "D = np.diag(eigVal)\n",
+    "\n",
+    "# Matrizes con la raiz cuadrada de los valores propios en la diagonal principal y sus modificaciones:\n",
+    "Draiz = np.sqrt(D)\n",
+    "Draiz[1] = Draiz[1] * -1\n",
+    "\n",
+    "Draiz1 = np.sqrt(D)\n",
+    "Draiz1[2] = Draiz1[2] * -1\n",
+    "\n",
+    "Draiz2 = np.sqrt(D)\n",
+    "Draiz2[1] = Draiz2[1] * -1\n",
+    "Draiz2[2] = Draiz2[2] * -1\n",
+    "\n",
+    "Draiz3 = np.sqrt(D)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Paso 3:\n",
+    "\n",
+    "Realizamos $\\sqrt{A}=P\\sqrt{D}P^{-1}$ para cada Draiz[i] obtenida. Tenemos en cuenta que $\\sqrt{A}=B$\n",
+    "\n",
+    "Estas cuatro matgrices obtenidas son: A2, B2, C2 y D2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 3 -3  2]\n",
+      " [-4  4 -4]\n",
+      " [-3  3  3]]\n",
+      "[[ 3. -3.  2.]\n",
+      " [-4.  4. -4.]\n",
+      " [-3.  3.  3.]]\n",
+      "[[ 3. -3.  2.]\n",
+      " [-4.  4. -4.]\n",
+      " [-3.  3.  3.]]\n",
+      "[[ 3. -3.  2.]\n",
+      " [-4.  4. -4.]\n",
+      " [-3.  3.  3.]]\n",
+      "[[ 3. -3.  2.]\n",
+      " [-4.  4. -4.]\n",
+      " [-3.  3.  3.]]\n",
+      "[[-3.74062631e-17  2.07449587e-17  2.86951205e-17]\n",
+      " [-2.33551252e-17  2.86977018e-18 -4.73406359e-17]\n",
+      " [ 9.46251144e-17 -1.10393362e-18 -1.03415058e-16]]\n",
+      "[[ 3.74062631e-17 -2.07449587e-17 -2.86951205e-17]\n",
+      " [ 2.33551252e-17 -2.86977018e-18  4.73406359e-17]\n",
+      " [-9.46251144e-17  1.10393362e-18  1.03415058e-16]]\n",
+      "[[-1.13907847  1.13907847 -0.28666884]\n",
+      " [ 1.65383324 -1.65383324  0.97852352]\n",
+      " [ 0.63259618 -0.63259618 -1.94945014]]\n",
+      "[[ 1.13907847 -1.13907847  0.28666884]\n",
+      " [-1.65383324  1.65383324 -0.97852352]\n",
+      " [-0.63259618  0.63259618  1.94945014]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Multiplicación de matrices para obtener las 4 matrices pedidas:\n",
+    "\n",
+    "A1 = np.matmul(P, Draiz)\n",
+    "A2 = np.matmul(A1, np.linalg.inv(P))\n",
+    "\n",
+    "B1 = np.matmul(P, Draiz1)\n",
+    "B2 = np.matmul(B1, np.linalg.inv(P))\n",
+    "\n",
+    "C1 = np.matmul(P, Draiz2)\n",
+    "C2 = np.matmul(C1, np.linalg.inv(P))\n",
+    "\n",
+    "D1 = np.matmul(P, Draiz3)\n",
+    "D2 = np.matmul(D1, np.linalg.inv(P))\n",
+    "\n",
+    "# Comprobamos que sus cuadrados cumples que B^2 = A\n",
+    "\n",
+    "print(A)\n",
+    "\n",
+    "print(np.matmul(A2, A2).real)\n",
+    "print(np.matmul(B2, B2).real)\n",
+    "print(np.matmul(C2, C2).real)\n",
+    "print(np.matmul(D2, D2).real)\n",
+    "\n",
+    "print(A2.real)\n",
+    "print(B2.real)\n",
+    "print(C2.real)\n",
+    "print(D2.real)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Apartado b)\n",
+    "¿Crees que las matrices se podrían haber obtenido por tanteo, empleando la fuerza bruta, con un coste computacional similar? ¿Qué nos dice esto, en términos de optimización, acerca de utilizar en determinadas ocasiones estrategias matemáticas en la resolución computacional de problemas?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Respuesta"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.7 64-bit",
-   "name": "python387jvsc74a57bd04cd7ab41f5fca4b9b44701077e38c5ffd31fe66a6cab21e0214b68d958d0e462"
+   "display_name": "Python 3.7.9 64-bit ('tf': conda)",
+   "name": "python379jvsc74a57bd00e3b36984b19af1918e567b6ef4427128e64f599ce0f81735987234538bd33aa"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": ""
-  },
-  "metadata": {
-   "interpreter": {
-    "hash": "4cd7ab41f5fca4b9b44701077e38c5ffd31fe66a6cab21e0214b68d958d0e462"
-   }
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.9"
   },
   "orig_nbformat": 2
  },
