actividad articulo python completada

--- a/Math for AI/Ejercicios_evaluables.ipynb
+++ b/Math for AI/Ejercicios_evaluables.ipynb
@@ -217,40 +217,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 3 -3  2]\n",
-      " [-4  4 -4]\n",
-      " [-3  3  3]]\n",
-      "[[ 3. -3.  2.]\n",
-      " [-4.  4. -4.]\n",
-      " [-3.  3.  3.]]\n",
-      "[[ 3. -3.  2.]\n",
-      " [-4.  4. -4.]\n",
-      " [-3.  3.  3.]]\n",
-      "[[ 3. -3.  2.]\n",
-      " [-4.  4. -4.]\n",
-      " [-3.  3.  3.]]\n",
-      "[[ 3. -3.  2.]\n",
-      " [-4.  4. -4.]\n",
-      " [-3.  3.  3.]]\n",
       "[[-3.74062631e-17  2.07449587e-17  2.86951205e-17]\n",
       " [-2.33551252e-17  2.86977018e-18 -4.73406359e-17]\n",
-      " [ 9.46251144e-17 -1.10393362e-18 -1.03415058e-16]]\n",
+      " [ 9.46251144e-17 -1.10393362e-18 -1.03415058e-16]] \n",
+      "\n",
       "[[ 3.74062631e-17 -2.07449587e-17 -2.86951205e-17]\n",
       " [ 2.33551252e-17 -2.86977018e-18  4.73406359e-17]\n",
-      " [-9.46251144e-17  1.10393362e-18  1.03415058e-16]]\n",
+      " [-9.46251144e-17  1.10393362e-18  1.03415058e-16]] \n",
+      "\n",
       "[[-1.13907847  1.13907847 -0.28666884]\n",
       " [ 1.65383324 -1.65383324  0.97852352]\n",
-      " [ 0.63259618 -0.63259618 -1.94945014]]\n",
+      " [ 0.63259618 -0.63259618 -1.94945014]] \n",
+      "\n",
       "[[ 1.13907847 -1.13907847  0.28666884]\n",
       " [-1.65383324  1.65383324 -0.97852352]\n",
-      " [-0.63259618  0.63259618  1.94945014]]\n"
+      " [-0.63259618  0.63259618  1.94945014]] \n",
+      "\n",
+      "[[ True  True  True]\n",
+      " [ True  True  True]\n",
+      " [ True  True  True]]\n",
+      "[[ True  True  True]\n",
+      " [ True  True  True]\n",
+      " [ True  True  True]]\n",
+      "[[ True  True  True]\n",
+      " [ True  True  True]\n",
+      " [ True  True  True]]\n",
+      "[[ True  True  True]\n",
+      " [ True  True  True]\n",
+      " [ True  True  True]]\n"
      ]
     }
    ],
@@ -269,19 +270,19 @@
     "D1 = np.matmul(P, Draiz3)\n",
     "D2 = np.matmul(D1, np.linalg.inv(P))\n",
     "\n",
+    "# Las cuatro matrices son: \n",
+    "\n",
+    "print(A2.real, \"\\n\")\n",
+    "print(B2.real, \"\\n\")\n",
+    "print(C2.real, \"\\n\")\n",
+    "print(D2.real, \"\\n\")\n",
+    "\n",
     "# Comprobamos que sus cuadrados cumples que B^2 = A\n",
     "\n",
-    "print(A)\n",
-    "\n",
-    "print(np.matmul(A2, A2).real)\n",
-    "print(np.matmul(B2, B2).real)\n",
-    "print(np.matmul(C2, C2).real)\n",
-    "print(np.matmul(D2, D2).real)\n",
-    "\n",
-    "print(A2.real)\n",
-    "print(B2.real)\n",
-    "print(C2.real)\n",
-    "print(D2.real)"
+    "print(np.round(np.matmul(A2, A2)).real.astype(int) == A)\n",
+    "print(np.round(np.matmul(B2, B2)).real.astype(int) == A)\n",
+    "print(np.round(np.matmul(C2, C2)).real.astype(int) == A)\n",
+    "print(np.round(np.matmul(D2, D2)).real.astype(int) == A)"
    ]
   },
   {
@@ -291,6 +292,28 @@
     "## Apartado b)\n",
     "¿Crees que las matrices se podrían haber obtenido por tanteo, empleando la fuerza bruta, con un coste computacional similar? ¿Qué nos dice esto, en términos de optimización, acerca de utilizar en determinadas ocasiones estrategias matemáticas en la resolución computacional de problemas?"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Si tenemos una matriz $A\\in \\mathbb{R} ^{3\\times 3}$  cuyos elementos están dados por $a_{ij}$. y otra matriz $B\\in \\mathbb{R} ^{3\\times 3}$ cuyos elementos son $b_{ij}$, necesitaríamos iterar sobre cada elemento $a_{ij}$ haciendo cumplir la siguiente ecuación (suponemos los índices circulares sobre ${3\\times 3}$, de tal forma que si $j = 2$, $j + 1 = 0$, y por tanto $b_{ij+1} = b_{i0}$):\n",
+    "\n",
+    "$a_{ij} = b_{ij}b_{ij} + b_{i+1j}b_{ij+1} + b_{i+2j}b_{ij+2}$\n",
+    "\n",
+    "Esto debe cumplirse para un total de 9 elementos.\n",
+    "\n",
+    "Es obvio que el coste computacional de iteración sobre elementos $b_{ij}$ posibles para encontrar solo un elemento $a_{ij}$ es excesivamente grande. Pensemos que debemos usar un total de 6 bucles anidados pues debemos iterar sobre cada elemento de $a_{ij}$ y encontrar 5 valores: $b_{ij}, b_{i+1j}, b_{ij+1}, b_{i+2j}, b_{ij+2}$. Debemos tener en cuenta también la exactitud de resolución del problema, pues debemos dar valores a los elementos $b_{ij}$. Estos valores pueden ser enteros, redondeados a las décimas, centésimas, etc. Cuantos menos decimales menos costoso será pero mucha más imprecisión tendremos.\n",
+    "\n",
+    "Por tanto el uso de estrategias matemáticas como la diagonalización de la matriz resulta mucho menos costoso en términos computacionales, así como mucho más preciso.\n",
+    "\n",
+    "La búsqueda sobre elementos por fuerza bruta nos lleva a un anidamiento de bucles que suponen un costo computacional excesivo, mientras que el cálculo de los valores y vectores propios nos da una solución con muchos menos anidamientos de bucles gracias a su estrategia de resolución."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
