Data analysis car insurance data preprocessing started

--- a/Math for AI/Ejercicios_evaluables.ipynb
+++ b/Math for AI/Ejercicios_evaluables.ipynb
@@ -98,8 +98,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Ejercicio 2:\n",
-    "Sea $A\\in \\mathbb{R} ^{3\\times 3}$ la matriz cuadradada dada por $$A=\\begin{pmatrix} 3 & -3 & 2 \\\\ -4 & 4 & -4 \\\\ -3 & 3 & 2 \\end{pmatrix}$$"
+    "# Ejercicio 2: Sea $A\\in \\mathbb{R} ^{3\\times 3}$ la matriz cuadradada dada por $$A=\\begin{pmatrix} 3 & -3 & 2 \\\\ -4 & 4 & -4 \\\\ -3 & 3 & 2 \\end{pmatrix}$$"
    ]
   },
   {
@@ -313,13 +312,26 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Ejercicio 3: Prográmese el método de gradient descent para funciones de n variables. \n",
+    "\n",
+    "La función deberá tener como parámetros de entradas:\n",
+    "\n",
+    "- El gradiente de la función que se desea minimizar ∇f.\n",
+    "- Un valor inicial x0 ∈ Rn.\n",
+    "- El ratio de aprendizaje γ (que se asume constante para cada iteración).\n",
+    "- Un parámetro de tolerancia tol (con el que finalizar el proceso cuando |f’(x)| < tol). \n",
+    "- Un número máximo de iteraciones maxit.\n",
+    "\n",
+    "La salida de la funci ́on deberá ser la aproximació del x que cumple f′(x) ≈ 0, correspondiente a la última iteración realizada en el método.\n",
+    "A continuación, aplica el método a los casos siguientes:"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Respuesta"
+    "## Apartado a)"
    ]
   }
  ],
@@ -329,16 +341,8 @@
    "name": "python379jvsc74a57bd00e3b36984b19af1918e567b6ef4427128e64f599ce0f81735987234538bd33aa"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": ""
   },
   "orig_nbformat": 2
  },
