all models complete. comment and structure

--- a/Math for AI/Ejercicios_evaluables.ipynb
+++ b/Math for AI/Ejercicios_evaluables.ipynb
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +323,8 @@
     "- Un parámetro de tolerancia tol (con el que finalizar el proceso cuando |f’(x)| < tol). \n",
     "- Un número máximo de iteraciones maxit.\n",
     "\n",
-    "La salida de la funci ́on deberá ser la aproximació del x que cumple f′(x) ≈ 0, correspondiente a la última iteración realizada en el método.\n",
+    "La salida de la función deberá ser la aproximació del x que cumple f′(x) ≈ 0, correspondiente a la última iteración realizada en el método.\n",
+    "\n",
     "A continuación, aplica el método a los casos siguientes:"
    ]
   },
@@ -331,7 +332,76 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Apartado a)"
+    "## Apartado a)\n",
+    "\n",
+    "$ g\\left( x,y\\right) =x^{2}+y^{2}-xy+2y+1 $ con $x_{0}=\\left( 3,4\\right) ,\\gamma =0,01$, tol = 1e-12, maxit=1e5. Contrasta el resultado obtenido numéricamente con el estudio analítico de la función.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 1.00000000e+01 -4.00000000e+00 -2.40000000e+00 -1.44000000e+00\n",
+      " -8.64000000e-01 -5.18400000e-01 -3.11040000e-01 -1.86624000e-01\n",
+      " -1.11974400e-01 -6.71846400e-02 -4.03107840e-02 -2.41864704e-02\n",
+      " -1.45118822e-02 -8.70712934e-03 -5.22427761e-03 -3.13456656e-03\n",
+      " -1.88073994e-03 -1.12844396e-03 -6.77066378e-04 -4.06239827e-04\n",
+      " -2.43743896e-04 -1.46246338e-04 -8.77478026e-05 -5.26486815e-05\n",
+      " -3.15892089e-05 -1.89535254e-05 -1.13721152e-05 -6.82326913e-06\n",
+      " -4.09396148e-06 -2.45637689e-06 -1.47382613e-06]\n",
+      "[ 1.00000000e+01 -4.00000000e+00 -2.40000000e+00 -1.44000000e+00\n",
+      " -8.64000000e-01 -5.18400000e-01 -3.11040000e-01 -1.86624000e-01\n",
+      " -1.11974400e-01 -6.71846400e-02 -4.03107840e-02 -2.41864704e-02\n",
+      " -1.45118822e-02 -8.70712934e-03 -5.22427761e-03 -3.13456656e-03\n",
+      " -1.88073994e-03 -1.12844396e-03 -6.77066378e-04 -4.06239827e-04\n",
+      " -2.43743896e-04 -1.46246338e-04 -8.77478026e-05 -5.26486815e-05\n",
+      " -3.15892089e-05 -1.89535254e-05 -1.13721152e-05 -6.82326913e-06\n",
+      " -4.09396148e-06 -2.45637689e-06 -1.47382613e-06  4.42147839e-06]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "def gradient_descent(gradient, start, learn_rate, n_iter=50, tolerance=1e-06):\n",
+    "    vi = np.array([])\n",
+    "    vj = np.array([])\n",
+    "    vector = start\n",
+    "    vi = np.append(vi, [vector])\n",
+    "    vj = np.append(vi, [gradient(vector)])\n",
+    "    for _ in range(n_iter):\n",
+    "        diff = -learn_rate * gradient(vector)\n",
+    "        if np.all(np.abs(diff) <= tolerance):\n",
+    "            break\n",
+    "        vector += diff\n",
+    "        vi = np.append(vi, [diff])\n",
+    "        vj = np.append(vi, [gradient(vector)])\n",
+    "    return vector, vi, vj\n",
+    "\n",
+    "vec, i, j = gradient_descent(gradient=lambda v: 2 * v, start=10.0, learn_rate=0.2)\n",
+    "print(i)\n",
+    "print(j)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Aparatdo b)\n",
+    "\n",
+    "$ f\\left( x\\right) =3x^{4}+4x^{3}-12x^{2}+7 $\n",
+    "\n",
+    "- Aplica el m ́etodo sobre f(x) con $x_{0}$ = 3 γ = 0.001, tol=1e-12, maxit=1e5.\n",
+    "- Aplica de nuevo el m ́etodo sobre f(x) con $x_{0}$ = 3, γ = 0.01, tol=1e-12, maxit=1e5.\n",
+    "- Contrasta e interpreta los dos resultados obtenidos en los apartados anteriores y comp ́aralos con los m ́ınimos locales obtenidos anal ́ıticamente. ¿Qu ́e influencia puede llegar a tener la eleccio ́n del ratio de aprendizaje γ?\n",
+    "- Aplica nuevamente el m ́etodo sobre f(x) con $x_{0}$ = 3, γ = 0.1, tol=1e-12, maxit=1e5. Interpreta el resultado.\n",
+    "- Finalmente, aplica el m ́etodo sobre f(x) con $x_{0}$ = 0, γ = 0.001, tol=1e-12, maxit=1e5. Interpreta el resultado y comp ́aralo con el estudio anal ́ıtico de f. ¿Es correcto el resultado? ¿Por qu ́e? ¿A qu ́e se debe el feno ́meno?"
    ]
   },
   {
@@ -348,8 +418,16 @@
    "name": "python379jvsc74a57bd00e3b36984b19af1918e567b6ef4427128e64f599ce0f81735987234538bd33aa"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": ""
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.9"
   },
   "orig_nbformat": 2
  },
