all models complete

--- a/Math for AI/Ejercicios_evaluables.ipynb
+++ b/Math for AI/Ejercicios_evaluables.ipynb
@@ -338,6 +338,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Estudio analítico"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Gradient Descent"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 41,
    "metadata": {},
@@ -397,11 +418,11 @@
     "\n",
     "$ f\\left( x\\right) =3x^{4}+4x^{3}-12x^{2}+7 $\n",
     "\n",
-    "- Aplica el m ́etodo sobre f(x) con $x_{0}$ = 3 γ = 0.001, tol=1e-12, maxit=1e5.\n",
+    "- Aplica el método sobre f(x) con $x_{0}$ = 3 γ = 0.001, tol=1e-12, maxit=1e5.\n",
     "- Aplica de nuevo el m ́etodo sobre f(x) con $x_{0}$ = 3, γ = 0.01, tol=1e-12, maxit=1e5.\n",
-    "- Contrasta e interpreta los dos resultados obtenidos en los apartados anteriores y comp ́aralos con los m ́ınimos locales obtenidos anal ́ıticamente. ¿Qu ́e influencia puede llegar a tener la eleccio ́n del ratio de aprendizaje γ?\n",
-    "- Aplica nuevamente el m ́etodo sobre f(x) con $x_{0}$ = 3, γ = 0.1, tol=1e-12, maxit=1e5. Interpreta el resultado.\n",
-    "- Finalmente, aplica el m ́etodo sobre f(x) con $x_{0}$ = 0, γ = 0.001, tol=1e-12, maxit=1e5. Interpreta el resultado y comp ́aralo con el estudio anal ́ıtico de f. ¿Es correcto el resultado? ¿Por qu ́e? ¿A qu ́e se debe el feno ́meno?"
+    "- Contrasta e interpreta los dos resultados obtenidos en los apartados anteriores y compáralos con los m ́ınimos locales obtenidos anal ́ıticamente. ¿Qué influencia puede llegar a tener la elección del ratio de aprendizaje γ?\n",
+    "- Aplica nuevamente el método sobre f(x) con $x_{0}$ = 3, γ = 0.1, tol=1e-12, maxit=1e5. Interpreta el resultado.\n",
+    "- Finalmente, aplica el método sobre f(x) con $x_{0}$ = 0, γ = 0.001, tol=1e-12, maxit=1e5. Interpreta el resultado y compáralo con el estudio analítico de f. ¿Es correcto el resultado? ¿Por qué? ¿A qué se debe el fenómeno?"
    ]
   },
   {
